--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTMLCalculator</title>
+    <script src="calculator.js" defer></script>
 </head>
 <body>
 
@@ -46,6 +47,14 @@
             </form>
         </div>
     </div>
+    <script>
+        document.addEventListener('keydown', function(event) {
+            // Check if the Enter key was pressed
+            if (event.keyCode === 13 || event.key === "Enter") {
 
+                display.value = eval(display.value);
+            }
+        });
+    </script>
 </body>
 </html>
