--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
                             const str = element.value.toString();
                             element.value = '';
                             element.value = eval(str);
+                        } else if (e.keyCode == 49) {
+                            element.value += "1";
+                        } else if (e.keyCode == 50) {
+                            element.value += "2";
+                        } else if (e.keyCode == 51) {
+                            element.value += "3";
+                        } else if (e.keyCode == 52) {
+                            element.value += "4";
+                        } else if (e.keyCode == 53) {
+                            element.value += "5";
+                        } else if (e.keyCode == 54) {
+                            element.value += "6";
+                        } else if (e.keyCode == 55) {
+                            element.value += "7";
+                        } else if (e.keyCode == 56) {
+                            element.value += "8";
+                        } else if (e.keyCode == 57) {
+                            element.value += "9";
+                        } else if (e.keyCode == 48) {
+                            element.value += "0";
+                        } else if (e.keyCode == 8) {
+                            element.value = element.value.toString().slice(0, -1);
                         }
                     });
                 </script>
