--- a/index.html
+++ b/index.html
@@ -17,33 +17,50 @@
                     const element = document.getElementById("display"); 
 
                     addEventListener("keydown", function(e) {
-                        if(e.keyCode === 13) {
+                        if(e.keyCode == 13) {
                             e.preventDefault();
                             const str = element.value.toString();
                             element.value = '';
                             element.value = eval(str);
-                        } else if (e.keyCode == 49) {
+                        } else if (e.keyCode == 49 && !e.shiftKey) {
                             element.value += "1";
-                        } else if (e.keyCode == 50) {
+                        } else if (e.keyCode == 50 && !e.shiftKey) {
                             element.value += "2";
-                        } else if (e.keyCode == 51) {
+                        } else if (e.keyCode == 51 && !e.shiftKey) {
                             element.value += "3";
-                        } else if (e.keyCode == 52) {
+                        } else if (e.keyCode == 52 && !e.shiftKey) {
                             element.value += "4";
-                        } else if (e.keyCode == 53) {
+                        } else if (e.keyCode == 53 && !e.shiftKey) {
                             element.value += "5";
-                        } else if (e.keyCode == 54) {
+                        } else if (e.keyCode == 54 && !e.shiftKey) {
                             element.value += "6";
-                        } else if (e.keyCode == 55) {
+                        } else if (e.keyCode == 55 && !e.shiftKey) {
                             element.value += "7";
-                        } else if (e.keyCode == 56) {
+                        } else if (e.keyCode == 56 && !e.shiftKey) {
                             element.value += "8";
-                        } else if (e.keyCode == 57) {
+                        } else if (e.keyCode == 57 && !e.shiftKey) {
                             element.value += "9";
-                        } else if (e.keyCode == 48) {
+                        } else if (e.keyCode == 48 && !e.shiftKey) {
                             element.value += "0";
-                        } else if (e.keyCode == 8) {
+                        } else if (e.keyCode == 8 && !e.shiftKey) {
                             element.value = element.value.toString().slice(0, -1);
+                        } else if (e.keyCode == 8 && e.shiftKey) {
+                            element.value = "";
+                        } else if (e.keyCode == 190 && !e.shiftKey) {
+                            element.value += ".";
+                        } else if (e.keyCode == 191 && !e.shiftKey) {
+                            element.value += "/";
+                        } else if (e.keyCode == 56 && e.shiftKey) {
+                            element.value += "*";
+                        } else if (e.keyCode == 189 && !e.shiftKey) {
+                            element.value += "-";
+                        } else if (e.keyCode == 187 && e.shiftKey) {
+                            element.value += "+";
+                        } else if (e.keyCode == 187 && !e.shiftKey) {
+                            e.preventDefault();
+                            const str = element.value.toString();
+                            element.value = '';
+                            element.value = eval(str);
                         }
                     });
                 </script>
